# FaceLift

./: .gitignore  .gitmodules  API.md  call_api.py  fastapi_server.py  gradio_app.py  pyproject.toml
